--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,9 @@ JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
 DATABASE_URL=
 DB_NAME=medusa-v2
+
+# Meilisearch 搜索引擎配置
+# 注意：MEILISEARCH_API_KEY 必须与 Meilisearch 服务的 MEILI_MASTER_KEY 完全一致
+# 生成强密钥: openssl rand -base64 32
+MEILISEARCH_HOST=http://localhost:7700
+MEILISEARCH_API_KEY=your-secure-meilisearch-master-key-here
